[package]
name = "lightcontrold"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
dbus = "0.9"
dbus-tokio = "0.7"
lifx-more = { path = "../lifx-more" }
tokio = { version = "1.8", features = ["rt"] }
